--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "aos": "^2.3.4",
+    "framer-motion": "^12.0.6",
     "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
