--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
